# itmo_rag_tg_bot

./: .gitignore  MIDDLEWARE_README.md  README.md  env.example  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
chat_rag/: __init__.py
chat_rag/bot/: bot.py  config.py  handlers.py  middlewares.py
chat_rag/rag/: courses_recommender.py  parser.py  pdf_parser.py  prompts.py  rag_agent.py  retriever.py
data/chunks/: ai_chunks.json  ai_courses_chunks.json  ai_product_chunks.json  ai_product_courses_chunks.json
